--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "google-auth-library": "^1.6.1",
         "jsonwebtoken": "^8.3.0",
         "mongoose": "^5.2.4",
-        "mongoose-unique-validator": "^2.0.1"
+        "mongoose-unique-validator": "^2.0.1",
+        "socket.io": "^2.1.1"
     },
     "devDependencies": {
         "nodemon": "^1.18.3"
